# Linux-Administration-Project

./: README.md
Part1/: direc.sh  part1_Q1_Q2.txt  userdef.sh
Part2/CMakelists/: CMakeLists (1).txt  CMakeLists (2).txt  CMakeLists.txt
Part2/Makefiles/: Makefile  caesar_cipher.mk  xor_cipher.mk
Part3/: Task_Manager.c
